compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__tuples__constant_tuples.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 85
expression: "\nconst a = \"Hello\"\nconst b = 1\nconst c = 2.0\nconst e = #(\"bob\", \"dug\")\n        "
---
----- SOURCE CODE

const a = "Hello"
const b = 1
const c = 2.0
const e = #("bob", "dug")
        

----- COMPILED JAVASCRIPT
const a = "Hello";

const b = 1;

const c = 2.0;

const e = ["bob", "dug"];
