compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__tuples__constant_tuples1.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 97
expression: "\nconst e = #(\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n  \"loooooooooooooong\", \"loooooooooooong\", \"loooooooooooooong\",\n)\n"
---
----- SOURCE CODE

const e = #(
  "loooooooooooooong", "loooooooooooong", "loooooooooooooong",
  "loooooooooooooong", "loooooooooooong", "loooooooooooooong",
)


----- COMPILED JAVASCRIPT
const e = [
  "loooooooooooooong",
  "loooooooooooong",
  "loooooooooooooong",
  "loooooooooooooong",
  "loooooooooooong",
  "loooooooooooooong",
];
