compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__tuples__tuple.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 5
expression: "\nfn go() {\n  #(\"1\", \"2\", \"3\")\n}\n"
---
----- SOURCE CODE

fn go() {
  #("1", "2", "3")
}


----- COMPILED JAVASCRIPT
function go() {
  return ["1", "2", "3"];
}
