compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__tuples__tuple_typescript.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 31
expression: "\npub fn go() {\n  #(\"1\", \"2\", \"3\")\n}\n"
---
----- SOURCE CODE

pub fn go() {
  #("1", "2", "3")
}


----- TYPESCRIPT DEFINITIONS
export function go(): [string, string, string];
