compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__tuples__tuple_with_block_element.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 53
expression: "\nfn go() {\n  #(\n    \"1\", \n    {\n      \"2\"\n      \"3\"\n    },\n  )\n}\n"
---
----- SOURCE CODE

fn go() {
  #(
    "1", 
    {
      "2"
      "3"
    },
  )
}


----- COMPILED JAVASCRIPT
function go() {
  return [
    "1",
    (() => {
      "2";
      return "3";
    })(),
  ];
}
