compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__tuples__tuple_with_block_element1.snap
---
source: compiler-core/src/javascript/tests/tuples.rs
assertion_line: 70
expression: "\nfn go() {\n  #(\n    \"1111111111111111111111111111111\",\n    #(\"1111111111111111111111111111111\", \"2\", \"3\"),\n    \"3\",\n  )\n}\n"
---
----- SOURCE CODE

fn go() {
  #(
    "1111111111111111111111111111111",
    #("1111111111111111111111111111111", "2", "3"),
    "3",
  )
}


----- COMPILED JAVASCRIPT
function go() {
  return [
    "1111111111111111111111111111111",
    ["1111111111111111111111111111111", "2", "3"],
    "3",
  ];
}
